--- a/bolum-04-active-directory.html
+++ b/bolum-04-active-directory.html
@@ -592,6 +592,13 @@ Get-ADOrganizationalUnit -Filter * | Format-Table Name, DistinguishedName</code>
                 </div>
             </div>
 
+            <div class="callout" style="background: linear-gradient(135deg, #e3f2fd, #bbdefb); padding: 16px; border-left: 4px solid #2196f3; border-radius: 10px; margin: 24px 0;">
+                <strong>GPO (Group Policy) Detayları:</strong> Domain genelinde politika yönetimi, LSDOU, loopback, filtreleme, ADMX ve daha fazlası için kapsamlı rehbere göz atın.
+                <div class="action-buttons" style="margin-top: 10px;">
+                    <a href="bolum-16-group-policy.html" class="btn btn-primary">🧩 GPO’ya Git</a>
+                </div>
+            </div>
+
             <div class="group-policy">
                 <h2>📋 Group Policy</h2>
                 
